# harmonic-fullstack-jam

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/backend/db/: database.py  init_localdb.sh
backend/backend/routes/: bulk_add_jobs.py  collections.py  companies.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AddToCollectionModal.tsx  BulkAddProgressBar.tsx  CompanyTable.tsx
frontend/src/utils/: jam-api.ts  useApi.ts  useMutation.ts  usePoll.ts
